Approved. Step name: Proofread

--- a/l10n/ru-RU.json
+++ b/l10n/ru-RU.json
@@ -1,5 +1,5 @@
 {
-  "name":"English",
-  "symbol":"en-EN",
-  "welcome":"Welcome to Bookchain!"
+  "name":"Русский",
+  "symbol":"ru-RU",
+  "welcome":"Добро пожаловать в Bookchain!"
 }
